# agentic-rag-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.ingest_checkpoints/: ingested_hashes.json
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: __init__.py  base.py  graph.py  loop.py  registry.py  tools.py
app/api/: __init__.py  agent.py  chat.py  documents.py  guardrails.py  jobs.py  payments.py  stream.py  telegram.py
app/bench/: __init__.py  __main__.py
app/core/: __init__.py  errors.py  logging.py
app/evals/: __init__.py  __main__.py  calibration.py  composite.py  golden_set.json  judge.py  judged_set.json  metrics.py  models.py  retrieval.py  runner.py
docs/: RESEARCH.md  architecture.md  data-pipeline.md  deployment.md
tests/: conftest.py  test_agent.py  test_agent_api.py  test_api_design.py  test_bench.py  test_calibration.py  test_chat_api.py  test_checkpoint_store.py  test_chunk.py  test_composite.py  test_dedup.py  test_embed_batches.py  test_embed_cache.py  test_env_example.py  test_evals.py  test_extract.py  test_generation.py  test_graph.py  test_guardrails.py  test_guardrails_api.py  test_ingest_cli.py  test_jobs_api.py  test_judge.py  test_metadata.py  test_metrics.py  test_observability.py  test_payments_api.py  test_probe.py  test_rag_pipeline.py  test_ratelimit.py  test_retrieval_metrics.py  test_smoke.py  test_store_pool.py  test_stream_api.py  test_telegram.py  test_telegram_api.py  test_validators.py
(+50 files in other folders)
